--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <article>Калькулятор, начавший свой путь как простое устройство для арифметических расчетов, превратился в универсальный инструмент,
              нашедший свое применение в различных сферах жизни. Независимо от профессии или образования, калькулятор остается надежным помощником,
               делая нашу жизнь более удобной и эффективной.</article>
+            <p class="namestat">Кстати..</p>
             <article>
-                <p class="namestat">Кстати..</p>
-                <p><i>Если у вас что-нибудь сломалось, рекомендую обратиться к <a href="">Meidlyx Услугам</a></i></p>
+                <p><i>Если у вас что-нибудь сломалось, рекомендую обратиться к <a href="https://meidlyx.github.io/Meidlyx-Services/">Meidlyx Услугам</a></i></p>
             </article>
             <p class="namekom"><b><i>Комментарии:</i></b></p>
             <div class="prof">
